# local-assistant

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  coding-agent-system-prompt.md  docs-urls.txt  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: check.md  checklist.md  fetch-docs.md  ingest.md  phase.md  serve.md  test.md
agent-instructions/: system-prompt.md
agent-instructions/phases/: phase-01-ollama-client.md  phase-03-agent-loop.md  phase-04-rag-pipeline.md  phase-05-continue-dev.md  phase-07-finetune.md  phase-index.md
checklists/: docs-fetching-checklist.md  phase-00-checklist.md  phase-01-checklist.md  phase-02-checklist.md  phase-03-checklist.md  phase-04-checklist.md  phase-05-checklist.md  phase-06-checklist.md  phase-07-checklist.md  phase-index.md
modelfiles/: Modelfile.custom-coder  Modelfile.my-coder  Modelfile.qwen-coder
phases/: phase-00-scaffold.md  phase-02-tools.md  phase-06-testing.md
scripts/: add_repo.py  chat.py  diag_ollama.py  fetch_docs.py  finetune.py  ingest.py  view_chroma.py
src/: main.py
src/agent/: exceptions.py  loop.py  options.py  parser.py
src/ollama/: client.py  exceptions.py  options.py  types.py
src/rag/: context_builder.py  ingest.py  options.py  retriever.py
src/tools/: base.py  list_files.py  read_file.py  registry.py  run_command.py  search_files.py  write_file.py
src/workspace/: context.py
tests/: test_server.py
tests/agent/: test_loop.py  test_parser.py
tests/ollama/: test_client.py
tests/rag/: test_context_builder.py  test_ingest.py  test_retriever.py
tests/security/: test_path_traversal.py
tests/tools/: test_list_files.py  test_read_file.py  test_registry.py  test_run_command.py  test_search_files.py  test_write_file.py
tests/workspace/: test_context.py
