[project]
name = "local-ai-copilot"
version = "0.1.0"
description = "Local AI coding assistant — Python agent for a .NET fullstack developer"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-ollama>=0.2",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "chromadb>=0.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "structlog>=24.1",
    "aiofiles>=23.2",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-aiofiles>=23.2",
]
finetune = [
    "unsloth",
    "trl>=0.9",
    "datasets>=2.20",
    "transformers>=4.42",
    "torch",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "PTH", "ASYNC"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]
"scripts/**" = ["ANN"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["scripts/finetune.py"]

[[tool.mypy.overrides]]
module = [
    "langchain.*", "langchain_community.*", "langchain_ollama.*",
    "chromadb.*", "unsloth.*", "trl.*", "datasets.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 80
